// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFeedHeader renders header with all props defined 1`] = `
<div
  className="sc-cmthru jtnYbs"
>
  <div
    className="sc-hMFtBS eLbhwi"
  >
    <h2
      className="sc-cMljjf leOqMw"
      size="LARGE"
    >
      999 activities
    </h2>
  </div>
  <div
    className="sc-cLQEGU eeGZWg"
  >
    <a
      className="sc-VigVT kJjasd sc-gqPbQI hhOCOL"
      disabled={false}
      href="http://testing.example.com"
    >
      Test button
    </a>
  </div>
</div>
`;

exports[`ActivityFeedHeader renders header with one activity 1`] = `
<div
  className="sc-cmthru jtnYbs"
>
  <div
    className="sc-hMFtBS eLbhwi"
  >
    <h2
      className="sc-cMljjf leOqMw"
      size="LARGE"
    >
      1 activity
    </h2>
  </div>
  <div
    className="sc-cLQEGU eeGZWg"
  />
</div>
`;

exports[`ActivityFeedHeader renders header without props 1`] = `
<div
  className="sc-cmthru jtnYbs"
>
  <div
    className="sc-hMFtBS eLbhwi"
  >
    <h2
      className="sc-cMljjf leOqMw"
      size="LARGE"
    >
      Activities
    </h2>
  </div>
  <div
    className="sc-cLQEGU eeGZWg"
  />
</div>
`;
